fix(index.css): fix upload chart alignment (MEF-4570)

--- a/cg-percent-pie.sass
+++ b/cg-percent-pie.sass
@@ -19,6 +19,7 @@
     width: 1em
     height: 1em
     position: relative
+    text-align: left
     border: $border-size solid $circle-shadow
     border-radius: 50%
     @extend %box-sizing
